# rest-project

./: .env  Cargo.toml
src/: main.rs
src/config/: auth.rs  db.rs
src/controllers/: auth.rs  auth_controller.rs
src/helpers/: http_helpers.rs  mod.rs
src/html_modal/: html_modal.rs  mod.rs
web/auth/: auth.html
