[package]
name = "rest-project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
diesel = { version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35"]}
dotenvy = "0.15.7"
html5ever = "0.35.0"
markup5ever_rcdom = "0.35.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
