[package]
name = "rest-project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
async-std = "1.13.2"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
sqlx = {version = "0.8.6", default-features = false, features = ["runtime-async-std", "macros", "mysql", "time"]}
sqlx-mysql = "0.8.6"

[dependencies.uuid]
version = "1.18.0"
features = [
    "v4",
]
